
June 17. 2010: version 1.2.0:

- the twoAC() function and its print method is introduced for
  estimation of d-prime and tau in the 2-AC protocol
- the clls function and its methods are no longer supported. 
  The user is adviced to use clm() from package ordinal instead. 

July 20. 2010: version 1.2.1:

- the following methods for twoAC objects are now available: confint,
  profile, confint.profile and plot.profile.

October 13. 2010: version 1.2.2:

- rescale function and additional auxiliary (psyfun, psyinv, psyderiv,
  pc2pd, pd2pc) functions included
- major revision of betabin: argument Pguess has been removed and the
  method argument is now the sensory discrimination protocol rather
  than the parameterization of the beta-binomial model. The summary
  method has gained the argument level instead of alpha. The results
  of the summary method are much more extensive with results in terms
  of Pc, Pd and d-prime.
- revision of findcr function. It is now faster and more reliable
  since it is using uniroot rather than a simple while loop and an
  explicit test that the return value is in fact the critical value is
  conducted.  
- Error in discrimSim for the threeAFC method corrected.

October 28. 2010: version 1.2.3:

- major revision of discrim, discrimPwr and discrimSS including
  confint.discrim, profile.discrim, print.discrim and
  plot.profile.discrim. 

November 25. 2010: version 1.2.4:

- Vignette 'Methodology' describes the statistical methodology of
  sensory discrimination tests. 
- Added the convenience functions d.primePwr and d.primeSS.

November 26. 2010: version 1.2.5:

- print.anota is fixed.
- confint.anota and plot.anota functions added and documented in the
  AnotA help file. Examples added to help page.

December 9. 2010: version 1.2.6:

- corrections made to Statistical Methodology vignette.

March 3. 2011: version 1.2.7:

- major update of twoAC implementation
- added exact power computations for the 2-AC protocol in function
  twoACpwr
