@@ -1,11 +1,11 @@
 Package: sensR
 Type: Package
 Title: Thurstonian models for sensory discrimination
-Version: 1.2.7
+Version: 1.2.8
 Date: 2011-03-03
 Author: Rune Haubo B Christensen and Per Bruun Brockhoff
 Maintainer: Rune Haubo B Christensen <rhbc@imm.dtu.dk>
-Depends: numDeriv
+Depends: ordinal, numDeriv
 Suggests: MASS
 Description: Provides methods for sensory discrimination methods; 
   duotrio, triangle, 2-AFC, 3-AFC, A-not A, same-different and 2-AC. 
